# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-verbs"
description = "Generic interfaces for machine learning"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
keywords = ["ml", "machine learning"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = []
urls = { github = "https://github.com/NowanIlfideme/ml-verbs" }

[project.optional-dependencies]
dev = [
    "setuptools>=61.0.0",
    "setuptools-scm[toml]>=6.2",
    "pre-commit==3.4.0",
    "black==23.3.0",
    "isort==5.12.0",
    "ruff==0.0.272",
    "mypy==1.3.0",
    "pytest==7.3.2",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "pygments",
]

[project.scripts]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }
packages = ["ml_verbs"]

[tool.setuptools.package-data]

[tool.setuptools.dynamic]
version = { attr = "ml_verbs.version.__version__" }

[tool.setuptools_scm]

[tool.ruff]
line-length = 105
src = ["src"]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    # "UP", # pyupgrade
    "D", # pydocstyle
]
ignore = ["D203", "D213"] # conflicting

[tool.ruff.pydocstyle]
convention = "numpy"


[tool.black]
line-length = 105
target-version = ['py39']

[tool.isort]
profile = "black"
skip = [".git"]

[tool.pytest.ini_options]
# Docs: https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
minversion = "6.0"
testpaths = ["src/test"]


[tool.mypy]
# Docs: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
python_version = "3.9"
namespace_packages = false
warn_unused_configs = true
warn_return_any = false
files = ["src/ml_verbs"]
exclude = "src/test"

[[tool.mypy.overrides]]
module = ["ml_verbs.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["setuptools", "setuptools_scm"]
ignore_missing_imports = true
